--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -1860,7 +1860,7 @@
                 </div>
                 <div class="flex gap-4">
                     <input type="checkbox" id="cg0" name="cg0" value="1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-100 rounded">
-                    <label for="cg0" class="ms-2 text-sm text-gray-900"> Check only if before entering the system, the child was under the care of someone other than the child's mother or father. Otherwise, skip to Section 4." </label>
+                    <label for="cg0" class="ms-2 text-sm text-gray-900"> Check only if before entering the system, the child was under the care of someone other than the child's mother or father. Otherwise, skip to Section 4. </label>
                 </div>
             </div>
 
@@ -2718,8 +2718,8 @@
                         <label for="sa4_8" class="ms-2 text-sm text-gray-900">8. The poverty of parents that prevents them from raising the child.</label>
                     </div>
                     <div class="flex items-center">
-                        <input type="checkbox" id="sa4_10" name="sa4_10" value="9" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="sa4_10" class="ms-2 text-sm text-gray-900">9. Additional causes (please specify): …</label>
+                        <input type="checkbox" id="sa4_10" name="sa4_10" value="10" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="sa4_10" class="ms-2 text-sm text-gray-900">10. Additional causes (please specify): …</label>
                     </div>
                     <input type="text" id="sa4_10_other" name="sa4_10_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
@@ -3587,8 +3587,8 @@
                         <label for="qfam1-6" class="ms-2 text-sm text-gray-900">6. No, the child was taken from a medical unit or institution</label>
                     </div>
                     <div class="flex items-center">
-                        <input type="radio" id="qfam1-7" name="qfam1" value="7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="qfam1-7" class="ms-2 text-sm text-gray-900">7. Another situation, please specify: …</label>
+                        <input type="radio" id="qfam1-7" name="qfam1" value="8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="qfam1-7" class="ms-2 text-sm text-gray-900">8. Another situation, please specify: …</label>
                     </div>
                     <input type="text" id="qfam1_other" name="qfam1_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                     <div class="flex items-center">
