--- a/src/pages/instruments/03_csr_uz.html
+++ b/src/pages/instruments/03_csr_uz.html
@@ -218,7 +218,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="j6-1" type="radio" value="0" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="j6-1" class="ms-2 text-sm text-gray-900">0. Yo'q</label>
+                        <label for="j6-1" class="ms-2 text-sm text-gray-900">0. Ma'lumoti yo'q</label>
                     </div>
                     <div class="flex items-center">
                         <input id="j6-2" type="radio" value="1" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -230,7 +230,7 @@
                     </div>
                     <div class="flex items-center">
                         <input id="j6-4" type="radio" value="3" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="j6-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan maxsus o'rta / kasb-hunar ta'limi</label>
+                        <label for="j6-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan maxsus o'rta/kasb-hunar ta'limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="j6-5" type="radio" value="4" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -319,7 +319,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="e4-1" type="radio" value="0" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="e4-1" class="ms-2 text-sm text-gray-900">0. Yo'q</label>
+                        <label for="e4-1" class="ms-2 text-sm text-gray-900">0. Ma'lumoti yo'q</label>
                     </div>
                     <div class="flex items-center">
                         <input id="e4-2" type="radio" value="1" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -331,7 +331,7 @@
                     </div>
                     <div class="flex items-center">
                         <input id="e4-4" type="radio" value="3" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="e4-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan maxsus o'rta / kasb-hunar ta'limi</label>
+                        <label for="e4-4" class="ms-2 text-sm text-gray-900">3. Tugallanmagan maxsus o'rta/kasb-hunar ta'limi</label>
                     </div>
                     <div class="flex items-center">
                         <input id="e4-5" type="radio" value="4" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -504,7 +504,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>E15. 2024 yil mart oyi uchin xodimning oylik umumiy ish haqi qancha edi?</div>
                 <div class="flex items-center gap-4">
-                    <input type="text" id="e15" name="e15" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" /> UZS
+                    <input type="text" id="e15" name="e15" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" /> SO'M
                 </div>
             </div>
 
