--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -2718,8 +2718,8 @@
                         <label for="sa4_8" class="ms-2 text-sm text-gray-900">8. Бедственное положение родителей, мешающее им воспитывать ребенка.</label>
                     </div>
                     <div class="flex items-center">
-                        <input type="checkbox" id="sa4_10" name="sa4_10" value="9" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="sa4_10" class="ms-2 text-sm text-gray-900">9. Дополнительные причины (просьба уточнить): …</label>
+                        <input type="checkbox" id="sa4_10" name="sa4_10" value="10" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="sa4_10" class="ms-2 text-sm text-gray-900">10. Дополнительные причины (просьба уточнить): …</label>
                     </div>
                     <input type="text" id="sa4_10_other" name="sa4_10_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
@@ -3587,8 +3587,8 @@ NA
                         <label for="qfam1-6" class="ms-2 text-sm text-gray-900">6. Нет, ребенка забрали из медицинского подразделения или учреждения</label>
                     </div>
                     <div class="flex items-center">
-                        <input type="radio" id="qfam1-7" name="qfam1" value="7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="qfam1-7" class="ms-2 text-sm text-gray-900">7. Другая ситуация, уточните: …</label>
+                        <input type="radio" id="qfam1-7" name="qfam1" value="8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="qfam1-7" class="ms-2 text-sm text-gray-900">8. Другая ситуация, уточните: …</label>
                     </div>
                     <input type="text" id="qfam1_other" name="qfam1_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                     <div class="flex items-center">
@@ -5407,15 +5407,15 @@ NA
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input type="radio" id="edk1-1" name="edk1" value="1" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-NA
+                        <label for="edk1-1" class="ms-2 text-sm text-gray-900">1. В общеобразовательном учреждении, без инклюзивных классов/групп</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="edk1-2" name="edk1" value="2" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-NA
+                        <label for="edk1-2" class="ms-2 text-sm text-gray-900">2. В общеобразовательном учреждении с инклюзивными классами/группами</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="edk1-3" name="edk1" value="3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-NA
+                        <label for="edk1-3" class="ms-2 text-sm text-gray-900">3. В специализированном учебном заведении</label>
                     </div>
                     <div class="flex items-center">
                         <input type="radio" id="edk1-4" name="edk1" value="4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
