--- a/src/pages/instruments/03_csr_ru.html
+++ b/src/pages/instruments/03_csr_ru.html
@@ -218,7 +218,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="j6-1" type="radio" value="0" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="j6-1" class="ms-2 text-sm text-gray-900">0. Нет</label>
+                        <label for="j6-1" class="ms-2 text-sm text-gray-900">0. Нет образования</label>
                     </div>
                     <div class="flex items-center">
                         <input id="j6-2" type="radio" value="1" name="j6" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -319,7 +319,7 @@
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
                         <input id="e4-1" type="radio" value="0" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="e4-1" class="ms-2 text-sm text-gray-900">0. Нет</label>
+                        <label for="e4-1" class="ms-2 text-sm text-gray-900">0. Нет образования</label>
                     </div>
                     <div class="flex items-center">
                         <input id="e4-2" type="radio" value="1" name="e4" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
@@ -504,7 +504,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>Е15. Какова была общая месячная заработная плата работника в марте 2024 г.?</div>
                 <div class="flex items-center gap-4">
-                    <input type="text" id="e15" name="e15" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" /> UZS
+                    <input type="text" id="e15" name="e15" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" /> СУМ
                 </div>
             </div>
 
